--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "mdb-react-ui-kit": "^7.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
+    "sweetalert2": "^11.10.1",
     "swiper": "^11.0.4"
   },
   "devDependencies": {
